parser_tree/grammar.output
Terminals unused in grammar

   PREC2
   TEMPPREC
   INCR_OP
   DECR_OP
   MAIN
   WHITESPACE
   CONSTANT
   STRING


Grammar

    0 $accept: START $end

    1 START: OUTER

    2 OUTER: %empty
    3      | VARDEF OUTER
    4      | STRUCT1 OUTER
    5      | FUNCTION OUTER
    6      | error

    7 TYPE: INT
    8     | BOOL
    9     | VOID
   10     | FLOAT
   11     | DOUBLE
   12     | STRUCT IDENTIFIER
   13     | CHAR

   14 STRUCT1: STRUCT IDENTIFIER '{' MVARDEF VARDEF ';' '}' ';'

   15 MVARDEF: MVARDEF VARDEF ';'
   16        | %empty

   17 FUNCTION: TYPE VARNAME '(' FARG ')' '{' INNER '}'

   18 INNER: LOOP INNER
   19      | CONDITIONAL INNER
   20      | VARDEF INNER
   21      | RETURN UNARY_EXP ';'
   22      | INPUT INNER
   23      | OUTPUT INNER
   24      | MATH INNER
   25      | %empty
   26      | error INNER

   27 VARNAME: '*' VARNAME
   28        | '&' VARNAME
   29        | IDENTIFIER BRACKET

   30 BRACKET: BRACKET '[' RMATH ']'
   31        | %empty

   32 MARG: MARG TYPE VARNAME ','
   33     | %empty

   34 FARG: MARG TYPE VARNAME
   35     | %empty

   36 VARDEF: TYPE VARNAME ';'
   37       | TYPE VARNAME '=' RMATH ';'
   38       | TYPE MVAR VARNAME ';'
   39       | TYPE MVAR VARNAME '=' RMATH ';'

   40 MVAR: MVAR VARNAME ','
   41     | MVAR VARNAME '=' RMATH ','
   42     | VARNAME ','
   43     | VARNAME '=' RMATH ','

   44 MATH: VARNAME '=' RMATH ';'
   45     | ';'
   46     | VARNAME OPERATOR '=' RMATH ';'
   47     | UNARY_EXP ';'

   48 RMATH: '(' RMATH ')'
   49      | '!' RMATH
   50      | RADDSUB

   51 RADDSUB: RMULTIDIV
   52        | RADDSUB '-' RADDSUB
   53        | RADDSUB '+' RADDSUB

   54 RMULTIDIV: RMULTIDIV '*' RMULTIDIV
   55          | RMULTIDIV '/' RMULTIDIV
   56          | RMULTIDIV '%' RMULTIDIV
   57          | UNARY_EXP

   58 UNARY_EXP: VARNAME INC_OP
   59          | INC_OP VARNAME
   60          | VARNAME DEC_OP
   61          | DEC_OP VARNAME
   62          | CONST
   63          | FCALL
   64          | VARNAME

   65 CONDITIONAL: IFN
   66            | SWITCHN

   67 IFN: IF '(' COND ')' '{' INNER '}'
   68    | IF '(' error ')' '{' INNER '}'
   69    | IF '(' COND ')' '{' INNER '}' ELSEC
   70    | IF '(' error ')' '{' INNER '}' ELSEC

   71 COND: COND AND_OP COND
   72     | COND OR_OP COND
   73     | RMATH
   74     | COND '>' COND
   75     | COND '<' COND
   76     | COND DOUBLE_EQ_OP COND
   77     | COND NOT_EQ_OP COND
   78     | COND LESS_EQ_OP COND
   79     | COND GRE_EQ_OP COND

   80 ELSEC: ELIF '(' COND ')' '{' INNER '}' ELSEC
   81      | ELSE '{' INNER '}'
   82      | ELIF '(' COND ')' '{' INNER '}'
   83      | ELIF '(' error ')' '{' INNER '}'
   84      | ELIF '(' error ')' '{' INNER '}' ELSEC

   85 SWITCHN: SWITCH '(' COND ')' '{' SWITCHINNER '}'
   86        | SWITCH '(' error ')' '{' SWITCHINNER '}'

   87 SWITCHINNER: CASE CONST ':' '{' INNER '}' SWITCHINNER
   88            | CASE CONST ':' INNER SWITCHINNER
   89            | DEFAULT ':' '{' INNER '}' WODEFAULT
   90            | DEFAULT ':' INNER WODEFAULT
   91            | %empty

   92 WODEFAULT: CASE CONST ':' '{' INNER '}' WODEFAULT
   93          | CASE CONST ':' INNER WODEFAULT
   94          | %empty

   95 ARGT: MARGT RMATH

   96 MARGT: MARGT RMATH ','
   97      | %empty

   98 FCALL: VARNAME '(' ARGT ')'

   99 LOOP: FORN
  100     | WHILEN
  101     | DOWHILEN

  102 FL1: MATH

  103 FL2: COND
  104    | %empty

  105 FL3: VARNAME '=' RMATH
  106    | TYPE VARNAME '=' RMATH
  107    | VARNAME OPERATOR '=' RMATH
  108    | UNARY_EXP
  109    | %empty

  110 OPERATOR: '+'
  111         | '-'
  112         | '*'
  113         | '/'
  114         | '&'
  115         | '^'
  116         | '|'
  117         | '%'

  118 FORN: FOR '(' FL1 FL2 ';' FL3 ')' '{' INNER '}'
  119     | FOR '(' error ')' '{' INNER '}'

  120 WHILEN: WHILE '(' COND ')' '{' INNER '}'
  121       | WHILE '(' error ')' '{' INNER '}'

  122 DOWHILEN: DO '{' INNER '}' WHILE '(' COND ')' ';'
  123         | DO '{' INNER '}' WHILE '(' error ')' ';'

  124 MIN: MIN INP_OP VARNAME
  125    | %empty

  126 MOUT: MOUT OUT_OP VARNAME
  127     | MOUT OUT_OP CONST
  128     | %empty

  129 INPUT: IN MIN INP_OP VARNAME ';'

  130 OUTPUT: OUT MOUT OUT_OP VARNAME ';'
  131       | OUT MOUT OUT_OP CONST ';'

  132 CONST: TRUE
  133      | FALSE
  134      | INTCONST
  135      | DOUBLE_CONSTANT
  136      | CHAR_CONSTANT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 49
'%' (37) 56 117
'&' (38) 28 114
'(' (40) 17 48 67 68 69 70 80 82 83 84 85 86 98 118 119 120 121 122
    123
')' (41) 17 48 67 68 69 70 80 82 83 84 85 86 98 118 119 120 121 122
    123
'*' (42) 27 54 112
'+' (43) 53 110
',' (44) 32 40 41 42 43 96
'-' (45) 52 111
'/' (47) 55 113
':' (58) 87 88 89 90 92 93
';' (59) 14 15 21 36 37 38 39 44 45 46 47 118 122 123 129 130 131
'<' (60) 75
'=' (61) 37 39 41 43 44 46 105 106 107
'>' (62) 74
'[' (91) 30
']' (93) 30
'^' (94) 115
'{' (123) 14 17 67 68 69 70 80 81 82 83 84 85 86 87 89 92 118 119 120
    121 122 123
'|' (124) 116
'}' (125) 14 17 67 68 69 70 80 81 82 83 84 85 86 87 89 92 118 119 120
    121 122 123
error (256) 6 26 68 70 83 84 86 119 121 123
PREC2 (258)
TEMPPREC (259)
OR_OP (260) 72
AND_OP (261) 71
DOUBLE_EQ_OP (262) 76
NOT_EQ_OP (263) 77
LESS_EQ_OP (264) 78
GRE_EQ_OP (265) 79
INCR_OP (266)
DECR_OP (267)
IDENTIFIER (268) 12 14 29
BOOL (269) 8
INT (270) 7
FLOAT (271) 10
DOUBLE (272) 11
CHAR (273) 13
DO (274) 122 123
WHILE (275) 120 121 122 123
IF (276) 67 68 69 70
ELIF (277) 80 82 83 84
FALSE (278) 133
TRUE (279) 132
IN (280) 129
OUT (281) 130 131
MAIN (282)
VOID (283) 9
FOR (284) 118 119
INTCONST (285) 134
CHAR_CONSTANT (286) 136
RETURN (287) 21
STRUCT (288) 12 14
SWITCH (289) 85 86
WHITESPACE (290)
CASE (291) 87 88 92 93
ELSE (292) 81
DEFAULT (293) 89 90
CONSTANT (294)
STRING (295)
INP_OP (296) 124 129
OUT_OP (297) 126 127 130 131
INC_OP (298) 58 59
DEC_OP (299) 60 61
DOUBLE_CONSTANT (300) 135


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
START (68)
    on left: 1, on right: 0
OUTER (69)
    on left: 2 3 4 5 6, on right: 1 3 4 5
TYPE (70)
    on left: 7 8 9 10 11 12 13, on right: 17 32 34 36 37 38 39 106
STRUCT1 (71)
    on left: 14, on right: 4
MVARDEF (72)
    on left: 15 16, on right: 14 15
FUNCTION (73)
    on left: 17, on right: 5
INNER (74)
    on left: 18 19 20 21 22 23 24 25 26, on right: 17 18 19 20 22 23
    24 26 67 68 69 70 80 81 82 83 84 87 88 89 90 92 93 118 119 120
    121 122 123
VARNAME (75)
    on left: 27 28 29, on right: 17 27 28 32 34 36 37 38 39 40 41 42
    43 44 46 58 59 60 61 64 98 105 106 107 124 126 129 130
BRACKET (76)
    on left: 30 31, on right: 29 30
MARG (77)
    on left: 32 33, on right: 32 34
FARG (78)
    on left: 34 35, on right: 17
VARDEF (79)
    on left: 36 37 38 39, on right: 3 14 15 20
MVAR (80)
    on left: 40 41 42 43, on right: 38 39 40 41
MATH (81)
    on left: 44 45 46 47, on right: 24 102
RMATH (82)
    on left: 48 49 50, on right: 30 37 39 41 43 44 46 48 49 73 95 96
    105 106 107
RADDSUB (83)
    on left: 51 52 53, on right: 50 52 53
RMULTIDIV (84)
    on left: 54 55 56 57, on right: 51 54 55 56
UNARY_EXP (85)
    on left: 58 59 60 61 62 63 64, on right: 21 47 57 108
CONDITIONAL (86)
    on left: 65 66, on right: 19
IFN (87)
    on left: 67 68 69 70, on right: 65
COND (88)
    on left: 71 72 73 74 75 76 77 78 79, on right: 67 69 71 72 74 75
    76 77 78 79 80 82 85 103 120 122
ELSEC (89)
    on left: 80 81 82 83 84, on right: 69 70 80 84
SWITCHN (90)
    on left: 85 86, on right: 66
SWITCHINNER (91)
    on left: 87 88 89 90 91, on right: 85 86 87 88
WODEFAULT (92)
    on left: 92 93 94, on right: 89 90 92 93
ARGT (93)
    on left: 95, on right: 98
MARGT (94)
    on left: 96 97, on right: 95 96
FCALL (95)
    on left: 98, on right: 63
LOOP (96)
    on left: 99 100 101, on right: 18
FL1 (97)
    on left: 102, on right: 118
FL2 (98)
    on left: 103 104, on right: 118
FL3 (99)
    on left: 105 106 107 108 109, on right: 118
OPERATOR (100)
    on left: 110 111 112 113 114 115 116 117, on right: 46 107
FORN (101)
    on left: 118 119, on right: 99
WHILEN (102)
    on left: 120 121, on right: 100
DOWHILEN (103)
    on left: 122 123, on right: 101
MIN (104)
    on left: 124 125, on right: 124 129
MOUT (105)
    on left: 126 127 128, on right: 126 127 130 131
INPUT (106)
    on left: 129, on right: 22
OUTPUT (107)
    on left: 130 131, on right: 23
CONST (108)
    on left: 132 133 134 135 136, on right: 62 87 88 92 93 127 131


State 0

    0 $accept: . START $end

    error   shift, and go to state 1
    BOOL    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    CHAR    shift, and go to state 6
    VOID    shift, and go to state 7
    STRUCT  shift, and go to state 8

    $end  reduce using rule 2 (OUTER)

    START     go to state 9
    OUTER     go to state 10
    TYPE      go to state 11
    STRUCT1   go to state 12
    FUNCTION  go to state 13
    VARDEF    go to state 14


State 1

    6 OUTER: error .

    $default  reduce using rule 6 (OUTER)


State 2

    8 TYPE: BOOL .

    $default  reduce using rule 8 (TYPE)


State 3

    7 TYPE: INT .

    $default  reduce using rule 7 (TYPE)


State 4

   10 TYPE: FLOAT .

    $default  reduce using rule 10 (TYPE)


State 5

   11 TYPE: DOUBLE .

    $default  reduce using rule 11 (TYPE)


State 6

   13 TYPE: CHAR .

    $default  reduce using rule 13 (TYPE)


State 7

    9 TYPE: VOID .

    $default  reduce using rule 9 (TYPE)


State 8

   12 TYPE: STRUCT . IDENTIFIER
   14 STRUCT1: STRUCT . IDENTIFIER '{' MVARDEF VARDEF ';' '}' ';'

    IDENTIFIER  shift, and go to state 15


State 9

    0 $accept: START . $end

    $end  shift, and go to state 16


State 10

    1 START: OUTER .

    $default  reduce using rule 1 (START)


State 11

   17 FUNCTION: TYPE . VARNAME '(' FARG ')' '{' INNER '}'
   36 VARDEF: TYPE . VARNAME ';'
   37       | TYPE . VARNAME '=' RMATH ';'
   38       | TYPE . MVAR VARNAME ';'
   39       | TYPE . MVAR VARNAME '=' RMATH ';'

    '&'         shift, and go to state 17
    '*'         shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    VARNAME  go to state 20
    MVAR     go to state 21


State 12

    4 OUTER: STRUCT1 . OUTER

    error   shift, and go to state 1
    BOOL    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    CHAR    shift, and go to state 6
    VOID    shift, and go to state 7
    STRUCT  shift, and go to state 8

    $end  reduce using rule 2 (OUTER)

    OUTER     go to state 22
    TYPE      go to state 11
    STRUCT1   go to state 12
    FUNCTION  go to state 13
    VARDEF    go to state 14


State 13

    5 OUTER: FUNCTION . OUTER

    error   shift, and go to state 1
    BOOL    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    CHAR    shift, and go to state 6
    VOID    shift, and go to state 7
    STRUCT  shift, and go to state 8

    $end  reduce using rule 2 (OUTER)

    OUTER     go to state 23
    TYPE      go to state 11
    STRUCT1   go to state 12
    FUNCTION  go to state 13
    VARDEF    go to state 14


State 14

    3 OUTER: VARDEF . OUTER

    error   shift, and go to state 1
    BOOL    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    CHAR    shift, and go to state 6
    VOID    shift, and go to state 7
    STRUCT  shift, and go to state 8

    $end  reduce using rule 2 (OUTER)

    OUTER     go to state 24
    TYPE      go to state 11
    STRUCT1   go to state 12
    FUNCTION  go to state 13
    VARDEF    go to state 14


State 15

   12 TYPE: STRUCT IDENTIFIER .
   14 STRUCT1: STRUCT IDENTIFIER . '{' MVARDEF VARDEF ';' '}' ';'

    '{'  shift, and go to state 25

    $default  reduce using rule 12 (TYPE)


State 16

    0 $accept: START $end .

    $default  accept


State 17

   28 VARNAME: '&' . VARNAME

    '&'         shift, and go to state 17
    '*'         shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    VARNAME  go to state 26


State 18

   27 VARNAME: '*' . VARNAME

    '&'         shift, and go to state 17
    '*'         shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    VARNAME  go to state 27


State 19

   29 VARNAME: IDENTIFIER . BRACKET

    $default  reduce using rule 31 (BRACKET)

    BRACKET  go to state 28


State 20

   17 FUNCTION: TYPE VARNAME . '(' FARG ')' '{' INNER '}'
   36 VARDEF: TYPE VARNAME . ';'
   37       | TYPE VARNAME . '=' RMATH ';'
   42 MVAR: VARNAME . ','
   43     | VARNAME . '=' RMATH ','

    '='  shift, and go to state 29
    '('  shift, and go to state 30
    ';'  shift, and go to state 31
    ','  shift, and go to state 32


State 21

   38 VARDEF: TYPE MVAR . VARNAME ';'
   39       | TYPE MVAR . VARNAME '=' RMATH ';'
   40 MVAR: MVAR . VARNAME ','
   41     | MVAR . VARNAME '=' RMATH ','

    '&'         shift, and go to state 17
    '*'         shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    VARNAME  go to state 33


State 22

    4 OUTER: STRUCT1 OUTER .

    $default  reduce using rule 4 (OUTER)


State 23

    5 OUTER: FUNCTION OUTER .

    $default  reduce using rule 5 (OUTER)


State 24

    3 OUTER: VARDEF OUTER .

    $default  reduce using rule 3 (OUTER)


State 25

   14 STRUCT1: STRUCT IDENTIFIER '{' . MVARDEF VARDEF ';' '}' ';'

    $default  reduce using rule 16 (MVARDEF)

    MVARDEF  go to state 34


State 26

   28 VARNAME: '&' VARNAME .

    $default  reduce using rule 28 (VARNAME)


State 27

   27 VARNAME: '*' VARNAME .

    $default  reduce using rule 27 (VARNAME)


State 28

   29 VARNAME: IDENTIFIER BRACKET .
   30 BRACKET: BRACKET . '[' RMATH ']'

    '['  shift, and go to state 35

    $default  reduce using rule 29 (VARNAME)


State 29

   37 VARDEF: TYPE VARNAME '=' . RMATH ';'
   43 MVAR: VARNAME '=' . RMATH ','

    '&'              shift, and go to state 17
    '*'              shift, and go to state 18
    '('              shift, and go to state 36
    IDENTIFIER       shift, and go to state 19
    FALSE            shift, and go to state 37
    TRUE             shift, and go to state 38
    INTCONST         shift, and go to state 39
    CHAR_CONSTANT    shift, and go to state 40
    INC_OP           shift, and go to state 41
    DEC_OP           shift, and go to state 42
    DOUBLE_CONSTANT  shift, and go to state 43
    '!'              shift, and go to state 44

    VARNAME    go to state 45
    RMATH      go to state 46
    RADDSUB    go to state 47
    RMULTIDIV  go to state 48
    UNARY_EXP  go to state 49
    FCALL      go to state 50
    CONST      go to state 51


State 30

   17 FUNCTION: TYPE VARNAME '(' . FARG ')' '{' INNER '}'

    ')'       reduce using rule 35 (FARG)
    $default  reduce using rule 33 (MARG)

    MARG  go to state 52
    FARG  go to state 53


State 31

   36 VARDEF: TYPE VARNAME ';' .

    $default  reduce using rule 36 (VARDEF)


State 32

   42 MVAR: VARNAME ',' .

    $default  reduce using rule 42 (MVAR)


State 33

   38 VARDEF: TYPE MVAR VARNAME . ';'
   39       | TYPE MVAR VARNAME . '=' RMATH ';'
   40 MVAR: MVAR VARNAME . ','
   41     | MVAR VARNAME . '=' RMATH ','

    '='  shift, and go to state 54
    ';'  shift, and go to state 55
    ','  shift, and go to state 56


State 34

   14 STRUCT1: STRUCT IDENTIFIER '{' MVARDEF . VARDEF ';' '}' ';'
   15 MVARDEF: MVARDEF . VARDEF ';'

    BOOL    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    CHAR    shift, and go to state 6
    VOID    shift, and go to state 7
    STRUCT  shift, and go to state 57

    TYPE    go to state 58
    VARDEF  go to state 59


State 35

   30 BRACKET: BRACKET '[' . RMATH ']'

    '&'              shift, and go to state 17
    '*'              shift, and go to state 18
    '('              shift, and go to state 36
    IDENTIFIER       shift, and go to state 19
    FALSE            shift, and go to state 37
    TRUE             shift, and go to state 38
    INTCONST         shift, and go to state 39
    CHAR_CONSTANT    shift, and go to state 40
    INC_OP           shift, and go to state 41
    DEC_OP           shift, and go to state 42
    DOUBLE_CONSTANT  shift, and go to state 43
    '!'              shift, and go to state 44

    VARNAME    go to state 45
    RMATH      go to state 60
    RADDSUB    go to state 47
    RMULTIDIV  go to state 48
    UNARY_EXP  go to state 49
    FCALL      go to state 50
    CONST      go to state 51


State 36

   48 RMATH: '(' . RMATH ')'

    '&'              shift, and go to state 17
    '*'              shift, and go to state 18
    '('              shift, and go to state 36
    IDENTIFIER       shift, and go to state 19
    FALSE            shift, and go to state 37
    TRUE             shift, and go to state 38
    INTCONST         shift, and go to state 39
    CHAR_CONSTANT    shift, and go to state 40
    INC_OP           shift, and go to state 41
    DEC_OP           shift, and go to state 42
    DOUBLE_CONSTANT  shift, and go to state 43
    '!'              shift, and go to state 44

    VARNAME    go to state 45
    RMATH      go to state 61
    RADDSUB    go to state 47
    RMULTIDIV  go to state 48
    UNARY_EXP  go to state 49
    FCALL      go to state 50
    CONST      go to state 51


State 37

  133 CONST: FALSE .

    $default  reduce using rule 133 (CONST)


State 38

  132 CONST: TRUE .

    $default  reduce using rule 132 (CONST)


State 39

  134 CONST: INTCONST .

    $default  reduce using rule 134 (CONST)


State 40

  136 CONST: CHAR_CONSTANT .

    $default  reduce using rule 136 (CONST)


State 41

   59 UNARY_EXP: INC_OP . VARNAME

    '&'         shift, and go to state 17
    '*'         shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    VARNAME  go to state 62


State 42

   61 UNARY_EXP: DEC_OP . VARNAME

    '&'         shift, and go to state 17
    '*'         shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    VARNAME  go to state 63


State 43

  135 CONST: DOUBLE_CONSTANT .

    $default  reduce using rule 135 (CONST)


State 44

   49 RMATH: '!' . RMATH

    '&'              shift, and go to state 17
    '*'              shift, and go to state 18
    '('              shift, and go to state 36
    IDENTIFIER       shift, and go to state 19
    FALSE            shift, and go to state 37
    TRUE             shift, and go to state 38
    INTCONST         shift, and go to state 39
    CHAR_CONSTANT    shift, and go to state 40
    INC_OP           shift, and go to state 41
    DEC_OP           shift, and go to state 42
    DOUBLE_CONSTANT  shift, and go to state 43
    '!'              shift, and go to state 44

    VARNAME    go to state 45
    RMATH      go to state 64
    RADDSUB    go to state 47
    RMULTIDIV  go to state 48
    UNARY_EXP  go to state 49
    FCALL      go to state 50
    CONST      go to state 51


State 45

   58 UNARY_EXP: VARNAME . INC_OP
   60          | VARNAME . DEC_OP
   64          | VARNAME .
   98 FCALL: VARNAME . '(' ARGT ')'

    '('     shift, and go to state 65
    INC_OP  shift, and go to state 66
    DEC_OP  shift, and go to state 67

    $default  reduce using rule 64 (UNARY_EXP)


State 46

   37 VARDEF: TYPE VARNAME '=' RMATH . ';'
   43 MVAR: VARNAME '=' RMATH . ','

    ';'  shift, and go to state 68
    ','  shift, and go to state 69


State 47

   50 RMATH: RADDSUB .
   52 RADDSUB: RADDSUB . '-' RADDSUB
   53        | RADDSUB . '+' RADDSUB

    '+'  shift, and go to state 70
    '-'  shift, and go to state 71

    $default  reduce using rule 50 (RMATH)


State 48

   51 RADDSUB: RMULTIDIV .
   54 RMULTIDIV: RMULTIDIV . '*' RMULTIDIV
   55          | RMULTIDIV . '/' RMULTIDIV
   56          | RMULTIDIV . '%' RMULTIDIV

    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74

    $default  reduce using rule 51 (RADDSUB)


State 49

   57 RMULTIDIV: UNARY_EXP .

    $default  reduce using rule 57 (RMULTIDIV)


State 50

   63 UNARY_EXP: FCALL .

    $default  reduce using rule 63 (UNARY_EXP)


State 51

   62 UNARY_EXP: CONST .

    $default  reduce using rule 62 (UNARY_EXP)


State 52

   32 MARG: MARG . TYPE VARNAME ','
   34 FARG: MARG . TYPE VARNAME

    BOOL    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    CHAR    shift, and go to state 6
    VOID    shift, and go to state 7
    STRUCT  shift, and go to state 57

    TYPE  go to state 75


State 53

   17 FUNCTION: TYPE VARNAME '(' FARG . ')' '{' INNER '}'

    ')'  shift, and go to state 76


State 54

   39 VARDEF: TYPE MVAR VARNAME '=' . RMATH ';'
   41 MVAR: MVAR VARNAME '=' . RMATH ','

    '&'              shift, and go to state 17
    '*'              shift, and go to state 18
    '('              shift, and go to state 36
    IDENTIFIER       shift, and go to state 19
    FALSE            shift, and go to state 37
    TRUE             shift, and go to state 38
    INTCONST         shift, and go to state 39
    CHAR_CONSTANT    shift, and go to state 40
    INC_OP           shift, and go to state 41
    DEC_OP           shift, and go to state 42
    DOUBLE_CONSTANT  shift, and go to state 43
    '!'              shift, and go to state 44

    VARNAME    go to state 45
    RMATH      go to state 77
    RADDSUB    go to state 47
    RMULTIDIV  go to state 48
    UNARY_EXP  go to state 49
    FCALL      go to state 50
    CONST      go to state 51


State 55

   38 VARDEF: TYPE MVAR VARNAME ';' .

    $default  reduce using rule 38 (VARDEF)


State 56

   40 MVAR: MVAR VARNAME ',' .

    $default  reduce using rule 40 (MVAR)


State 57

   12 TYPE: STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 78


State 58

   36 VARDEF: TYPE . VARNAME ';'
   37       | TYPE . VARNAME '=' RMATH ';'
   38       | TYPE . MVAR VARNAME ';'
   39       | TYPE . MVAR VARNAME '=' RMATH ';'

    '&'         shift, and go to state 17
    '*'         shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    VARNAME  go to state 79
    MVAR     go to state 21


State 59

   14 STRUCT1: STRUCT IDENTIFIER '{' MVARDEF VARDEF . ';' '}' ';'
   15 MVARDEF: MVARDEF VARDEF . ';'

    ';'  shift, and go to state 80


State 60

   30 BRACKET: BRACKET '[' RMATH . ']'

    ']'  shift, and go to state 81


State 61

   48 RMATH: '(' RMATH . ')'

    ')'  shift, and go to state 82


State 62

   59 UNARY_EXP: INC_OP VARNAME .

    $default  reduce using rule 59 (UNARY_EXP)


State 63

   61 UNARY_EXP: DEC_OP VARNAME .

    $default  reduce using rule 61 (UNARY_EXP)


State 64

   49 RMATH: '!' RMATH .

    $default  reduce using rule 49 (RMATH)


State 65

   98 FCALL: VARNAME '(' . ARGT ')'

    $default  reduce using rule 97 (MARGT)

    ARGT   go to state 83
    MARGT  go to state 84


State 66

   58 UNARY_EXP: VARNAME INC_OP .

    $default  reduce using rule 58 (UNARY_EXP)


State 67

   60 UNARY_EXP: VARNAME DEC_OP .

    $default  reduce using rule 60 (UNARY_EXP)


State 68
